tests/should_succeed/const.jou
const FOO = 123
const BAR = FOO+1
const MESSAGE = "hello"

def main() -> int:
    printf("%d %d\n", FOO, BAR)  # Output: 123 124
    puts(MESSAGE)  # Output: hello
    return 0
