tests/syntax_error/keyword_float.jou
def main() -> int:
    float = 1  # Error: expected an expression, got the 'float' keyword
    return 0
